--- a/Css/Bot/styleChatBot.css
+++ b/Css/Bot/styleChatBot.css
@@ -63,7 +63,7 @@ margin-top: 5vh; /* Subir el diseño 5% del alto de la ventana */
    
     max-width: 600px; /* Limitar el ancho máximo */
     height: 60vh; 
-    border: 1px solid #ccc;
+    border: 1px solid #3d3c3c;
     border-radius: 10px;
     overflow-y: auto;
     padding: 10px;
@@ -171,7 +171,8 @@ position: relative;
 flex: 1;
 min-height: 40px; /* Altura mínima de la barra de entrada */
 padding: 14px 10px;
-border: 1px solid #ccc;
+border: 1px solid #2c2c2c;
+
 border-radius: 10px;
 box-sizing: border-box;
 resize: vertical; /* Permitir redimensionamiento vertical */
@@ -186,7 +187,7 @@ padding: 5px 10px;
 border: none;
 border-radius: 5px;
 background-color: #007bff;
-color: #c2c1c1;
+color: #eee7e7;
 cursor: pointer;
 /*___________(si se quita esto el boton vuelve a su originalilidad)
 _____________________*/
@@ -219,7 +220,7 @@ position: relative;
 /* Estilos para el modo oscuro */
 
 .modo_oscuro {
-    background-color: #333 ;
+    background-color: #181717 ;
     color: #1a96e9;
 }
 
